fix login/signup/account overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,12 +159,12 @@ a {
 }
 
 // body
-// body {
-//   margin: 0;
-//   overflow-x: hidden;
-//   // margin-bottom: 150px;
-//   clear: both;
-// }
+body {
+  margin: 0;
+  overflow-x: hidden;
+  // margin-bottom: 150px;
+  clear: both;
+}
 
 #page-container {
   position: relative;
